feat: Finish Group Section
