# frontend/score-entity/openapi.json
@@ -12,21 +12,7 @@ paths:
         content:
           multipart/form-data:
             schema:
-              type: object
-              properties:
-                file:
-                  $ref: "#/components/schemas/FileUpload"
-      responses:
-        "200":
-          description: OK
-          content:
-            text/plain:
-              schema:
-                type: string
-  /file/test:
-    get:
-      tags:
-      - File Resource
+              $ref: "#/components/schemas/MultipartFormDataInput"
       responses:
         "200":
           description: OK
@@ -115,8 +101,68 @@ paths:
           description: OK
 components:
   schemas:
-    FileUpload:
+    FileItem:
       type: object
+      properties:
+        inMemory:
+          type: boolean
+        file:
+          $ref: "#/components/schemas/Path"
+        fileSize:
+          format: int64
+          type: integer
+        inputStream:
+          format: binary
+          type: string
+    FileStore:
+      type: object
+      properties:
+        readOnly:
+          type: boolean
+        totalSpace:
+          format: int64
+          type: integer
+        usableSpace:
+          format: int64
+          type: integer
+        unallocatedSpace:
+          format: int64
+          type: integer
+        blockSize:
+          format: int64
+          type: integer
+    FileSystem:
+      type: object
+      properties:
+        open:
+          type: boolean
+        readOnly:
+          type: boolean
+        separator:
+          type: string
+        rootDirectories:
+          type: array
+          items:
+            $ref: "#/components/schemas/Path"
+        fileStores:
+          type: array
+          items:
+            $ref: "#/components/schemas/FileStore"
+        userPrincipalLookupService:
+          $ref: "#/components/schemas/UserPrincipalLookupService"
+    FormValue:
+      type: object
+      properties:
+        value:
+          type: string
+        charset:
+          type: string
+        fileItem:
+          $ref: "#/components/schemas/FileItem"
+        fileName:
+          type: string
+        headers:
+          $ref: "#/components/schemas/MultivaluedMapStringString"
     Group:
       required:
       - name
@@ -128,8 +174,10 @@ components:
           nullable: true
         name:
           type: string
-        imageUrl:
-          type: string
+        image:
+          type: object
+          allOf:
+          - $ref: "#/components/schemas/Image"
           nullable: true
         totalScore:
           format: int32
@@ -140,9 +188,55 @@ components:
         name:
           type: string
           nullable: true
-        imageURL:
-          type: string
+        image:
+          type: object
+          allOf:
+          - $ref: "#/components/schemas/Image"
           nullable: true
+    Image:
+      required:
+      - publicId
+      - imageUrl
+      type: object
+      properties:
+        id:
+          format: int64
+          type: integer
+        publicId:
+          type: string
+        imageUrl:
+          type: string
+    MultipartFormDataInput:
+      type: object
+      properties:
+        values:
+          type: object
+          additionalProperties:
+            type: array
+            items:
+              $ref: "#/components/schemas/FormValue"
+    MultivaluedMapStringString:
+      type: object
+      additionalProperties:
+        type: array
+        items:
+          type: string
+    Path:
+      type: object
+      properties:
+        fileSystem:
+          $ref: "#/components/schemas/FileSystem"
+        absolute:
+          type: boolean
+        root:
+          $ref: "#/components/schemas/Path"
+        fileName:
+          $ref: "#/components/schemas/Path"
+        parent:
+          $ref: "#/components/schemas/Path"
+        nameCount:
+          format: int32
+          type: integer
     PublisherString:
       type: object
     ScoreUpdateRequest:
@@ -154,3 +248,5 @@ components:
         points:
           format: int32
           type: integer
+    UserPrincipalLookupService:
+      type: object
