# src/main/kotlin/org/rayleigh/data/group/GroupUpdateRequest.kt
@@ -1,4 +1,6 @@
 package org.rayleigh.data.group
 
-class GroupUpdateRequest(var name: String? = null, var imageURL: String? = null) {
+import org.rayleigh.entity.Image
+
+class GroupUpdateRequest(var name: String? = null, var image: Image? = null) {
 }
